<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="name_control_test_a">Control A</string>
    <string name="name_control_test_b">Control B</string>
    <string name="name_button_a">A</string>
    <string name="name_button_b">B</string>
    <string name="name_button_c">C</string>
    <string name="name_button_d">D</string>
    <string name="date_added">Adicionado em </string>

    <string name="add_control">Adicionar Controle Remoto</string>
    <string name="name_control">Nome do Controle</string>
    <string name="quantity_buttons">Quantos Botões?</string>
    <string name="cancel">CANCELAR</string>
    <string name="next">PRÓXIMO</string>
    <string name="restart">RECOMEÇAR</string>
    <string name="delete">DELETAR</string>
    <string name="ok">OK</string>

    <string name="one">01</string>
    <string name="two">02</string>
    <string name="three">03</string>
    <string name="four">04</string>

    <string name="title_register_buttons">Cadastrar Botões</string>
    <string name="description_register_button_first">Aperte o PRIMEIRO botão 3 vezes para cadastrá-lo</string>
    <string name="description_register_button_second">Aperte o SEGUNDO botão 3 vezes para cadastrá-lo</string>
    <string name="description_register_button_third">Aperte o TERCEIRO botão 3 vezes para cadastrá-lo</string>
    <string name="description_register_button_fourth">Aperte o QUARTO botão 3 vezes para cadastrá-lo</string>

    <string name="title_delete_control">Deletar Controle?</string>

    <string name="existing_control">Controle já registrado!</string>
    <string name="added_control">Controle Cadastrado com Sucesso!</string>

    <string name="overwrite">SOBRESCREVER</string>

    <string name="new_name">Novo nome</string>

    <string name="save">SALVAR</string>
    <string name="info_title">Informações Sobre o Controle</string>

    <string name="no_name_toast">Por favor, digite um nome</string>

    <string name="message_connect">Por favor, verifique se o receptor \nestá conectado</string>

    <string name="pressed_message_part_1">O botão </string>
    <string name="pressed_message_part_2">do controle \n</string>
    <string name="pressed_message_part_3">foi pressionado</string>

    <string name="message_doodle_landscape">Para começar, conecte o cabo do receptor \nno seu dispositivo e clique no botão laranja \npara adicionar um controle remoto.</string>
    <string name="message_doodle_portrait">Para começar, conecte o cabo do receptor no seu dispositivo e clique no botão laranja para \nadicionar um controle remoto.</string>
    <string name="message_doodle_small_screen">Para começar, conecte o cabo do receptor no seu dispositivo e \nclique no botão laranja para \nadicionar um controle remoto.</string>

    <string name="name_suggested_control">Controle_</string>

</resources>
