<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/existing_control"
        android:id="@+id/textView_existing_control"
        android:textColor="#010101"
        android:paddingTop="24dp"
        android:paddingRight="24dp"
        android:paddingLeft="24dp"
        android:paddingBottom="20dp"
        android:textSize="16sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:layout_marginRight="24dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/cancel"
            android:id="@+id/textView_cancel_overwrite"
            android:textColor="#009688"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/overwrite"
            android:id="@+id/textView_overwrite"
            android:textColor="#009688"
            android:padding="8dp" />
    </LinearLayout>

</LinearLayout>